kermeta_projects/fr.irisa.triskell.kermeta.io/src/test/resources/typechecher_tests/invalid/021_fsm_mustfail.kmt
/* $Id: 021_fsm_mustfail.kmt,v 1.2 2008-04-14 08:58:14 dvojtise Exp $
 * Creation date: November 10, 2006
 * License: EPL
 * Authors:
 *     Jim Steel
 *	   Didier Vojtisek
 */
@mainClass "fsm::Main"
@mainOperation "testmain"


package fsm;
require "../valid/021_minimization.kmt"
require "../valid/021_mandstart_fsm_type.kmt"
require "../valid/021_multstart_fsm_type.kmt"
require "../valid/021_composite_fsm_type.kmt"
require "../valid/021_finalstates_fsm_type.kmt"


require kermeta
class Main
{
    operation testmain() : Void is do 
		Minimizer<basic_fsmT>.new.minimizeAll(basic_fsmT.new)
		//Minimizer<mandstart_fsmT>.new.minimizeAll(mandstart_fsmT.new)
	    Minimizer<multstart_fsmT>.new.minimizeAll(multstart_fsmT.new)
		Minimizer<finalstates_fsmT>.new.minimizeAll(finalstates_fsmT.new)
		Minimizer<composite_fsmT>.new.minimizeAll(composite_fsmT.new)
    end
}